# unittest-parametrize

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/unittest_param/: __init__.py  exceptions.py  parametrize.py
tests/: test_parametrize.py
